# simple_thesis_rag

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  thesis_rag.py
app/cli/: main.py
app/ui/: __init__.py  gradio_app.py
docs/: architecture.md  design_decisions.md  operations.md  phase1_phase2_contract.md
scripts/: describe_mineru_images.py
src/: __init__.py
src/chunking/: text_chunker.py
src/contracts/: __init__.py  phase1_to_phase2.py
src/embeddings/: __init__.py  openai_embedder.py
src/generation/: __init__.py  answer_generator.py
src/indexing/: __init__.py  phase2_indexer.py  qdrant_store.py
src/ingestion/: __init__.py  pdf_ingestor.py  visual_describer.py
src/pipelines/: __init__.py  thesis_rag_pipeline.py
src/retrieval/: retriever.py
src/utils/: __init__.py  config.py  metadata.py  pipeline_factory.py  source_formatting.py
