[project]
name = "simple-rag"
version = "0.1.0"
description = "Simple thesis RAG system with modular pipeline components."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "qdrant-client>=1.9.0",
    "pypdf2>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
