[project]
name = "simple-rag"
version = "0.1.0"
description = "Simple thesis RAG system with modular pipeline components."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mineru[core]>=2.1.0",
    "openai>=1.0.0",
    "qdrant-client>=1.9.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
